operator/pkg/gateway-api/testdata/gateway/hostNetwork-enabled-exceed-max-address/input/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: hostnetwork-enabled
  namespace: gateway-conformance-infra
spec:
  gatewayClassName: cilium
  listeners:
    - name: http
      port: 80
      protocol: HTTP
      allowedRoutes:
        namespaces:
          from: Same
---
apiVersion: v1
kind: Service
metadata:
  name: cilium-gateway-hostnetwork-enabled
  namespace: gateway-conformance-infra
  labels:
    gateway.networking.k8s.io/gateway-name: hostnetwork-enabled
    io.cilium.gateway/owning-gateway: hostnetwork-enabled
spec:
  ports:
    - port: 3000
      targetPort: 80
      nodePort: 30020
---
apiVersion: v1
kind: Node
metadata:
  name: kind-worker
spec:
  podCIDR: 10.244.1.0/24
  podCIDRs:
  - 10.244.1.0/24
  - fd00:10:244:1::/64
status:
  addresses:
  - address: 172.18.0.3
    type: InternalIP
  - address: fc00:f853:ccd:e793::3
    type: InternalIP
  - address: kind-worker
    type: Hostname
---
apiVersion: v1
kind: Node
metadata:
  name: kind-worker2
spec:
  podCIDR: 10.244.1.0/24
  podCIDRs:
  - 10.244.1.0/24
  - fd00:10:244:1::/64
status:
  addresses:
  - address: 172.18.0.4
    type: InternalIP
  - address: fc00:f853:ccd:e793::3
    type: InternalIP
  - address: kind-worker
    type: Hostname
---
apiVersion: v1
kind: Node
metadata:
  name: kind-worker3
spec:
  podCIDR: 10.244.1.0/24
  podCIDRs:
  - 10.244.1.0/24
  - fd00:10:244:1::/64
status:
  addresses:
  - address: 172.18.0.5
    type: InternalIP
  - address: fc00:f853:ccd:e793::3
    type: InternalIP
  - address: kind-worker
    type: Hostname
---
apiVersion: v1
kind: Node
metadata:
  name: kind-worker4
spec:
  podCIDR: 10.244.1.0/24
  podCIDRs:
  - 10.244.1.0/24
  - fd00:10:244:1::/64
status:
  addresses:
  - address: 172.18.0.6
    type: InternalIP
  - address: fc00:f853:ccd:e793::3
    type: InternalIP
  - address: kind-worker
    type: Hostname
---
apiVersion: v1
kind: Node
metadata:
  name: kind-worker5
spec:
  podCIDR: 10.244.1.0/24
  podCIDRs:
  - 10.244.1.0/24
  - fd00:10:244:1::/64
status:
  addresses:
  - address: 172.18.0.7
    type: InternalIP
  - address: fc00:f853:ccd:e793::3
    type: InternalIP
  - address: kind-worker
    type: Hostname
---
apiVersion: v1
kind: Node
metadata:
  name: kind-worker6
spec:
  podCIDR: 10.244.1.0/24
  podCIDRs:
  - 10.244.1.0/24
  - fd00:10:244:1::/64
status:
  addresses:
  - address: 172.18.0.8
    type: InternalIP
  - address: fc00:f853:ccd:e793::3
    type: InternalIP
  - address: kind-worker
    type: Hostname
---
apiVersion: v1
kind: Node
metadata:
  name: kind-worker7
spec:
  podCIDR: 10.244.1.0/24
  podCIDRs:
  - 10.244.1.0/24
  - fd00:10:244:1::/64
status:
  addresses:
  - address: 172.18.0.9
    type: InternalIP
  - address: fc00:f853:ccd:e793::3
    type: InternalIP
  - address: kind-worker
    type: Hostname
---
apiVersion: v1
kind: Node
metadata:
  name: kind-worker8
spec:
  podCIDR: 10.244.1.0/24
  podCIDRs:
  - 10.244.1.0/24
  - fd00:10:244:1::/64
status:
  addresses:
  - address: 172.18.0.10
    type: InternalIP
  - address: fc00:f853:ccd:e793::3
    type: InternalIP
  - address: kind-worker
    type: Hostname

---
apiVersion: v1
kind: Node
metadata:
  name: kind-worker9
spec:
  podCIDR: 10.244.1.0/24
  podCIDRs:
  - 10.244.1.0/24
  - fd00:10:244:1::/64
status:
  addresses:
  - address: 172.18.0.11
    type: InternalIP
  - address: fc00:f853:ccd:e793::3
    type: InternalIP
  - address: kind-worker
    type: Hostname
---
apiVersion: v1
kind: Node
metadata:
  name: kind-worker10
spec:
  podCIDR: 10.244.1.0/24
  podCIDRs:
  - 10.244.1.0/24
  - fd00:10:244:1::/64
status:
  addresses:
  - address: 172.18.0.12
    type: InternalIP
  - address: fc00:f853:ccd:e793::3
    type: InternalIP
  - address: kind-worker
    type: Hostname
---
apiVersion: v1
kind: Node
metadata:
  name: kind-worker11
spec:
  podCIDR: 10.244.1.0/24
  podCIDRs:
  - 10.244.1.0/24
  - fd00:10:244:1::/64
status:
  addresses:
  - address: 172.18.0.13
    type: InternalIP
  - address: fc00:f853:ccd:e793::3
    type: InternalIP
  - address: kind-worker
    type: Hostname
---
apiVersion: v1
kind: Node
metadata:
  name: kind-worker12
spec:
  podCIDR: 10.244.1.0/24
  podCIDRs:
  - 10.244.1.0/24
  - fd00:10:244:1::/64
status:
  addresses:
  - address: 172.18.0.14
    type: InternalIP
  - address: fc00:f853:ccd:e793::3
    type: InternalIP
  - address: kind-worker
    type: Hostname
---
apiVersion: v1
kind: Node
metadata:
  name: kind-worker13
spec:
  podCIDR: 10.244.1.0/24
  podCIDRs:
  - 10.244.1.0/24
  - fd00:10:244:1::/64
status:
  addresses:
  - address: 172.18.0.15
    type: InternalIP
  - address: fc00:f853:ccd:e793::3
    type: InternalIP
  - address: kind-worker
    type: Hostname
---
apiVersion: v1
kind: Node
metadata:
  name: kind-worker14
spec:
  podCIDR: 10.244.1.0/24
  podCIDRs:
  - 10.244.1.0/24
  - fd00:10:244:1::/64
status:
  addresses:
  - address: 172.18.0.16
    type: InternalIP
  - address: fc00:f853:ccd:e793::3
    type: InternalIP
  - address: kind-worker
    type: Hostname
---
apiVersion: v1
kind: Node
metadata:
  name: kind-worker15
spec:
  podCIDR: 10.244.1.0/24
  podCIDRs:
  - 10.244.1.0/24
  - fd00:10:244:1::/64
status:
  addresses:
  - address: 172.18.0.17
    type: InternalIP
  - address: fc00:f853:ccd:e793::3
    type: InternalIP
  - address: kind-worker
    type: Hostname
---
apiVersion: v1
kind: Node
metadata:
  name: kind-worker18
spec:
  podCIDR: 10.244.1.0/24
  podCIDRs:
  - 10.244.1.0/24
  - fd00:10:244:1::/64
status:
  addresses:
  - address: 172.18.0.18
    type: InternalIP
  - address: fc00:f853:ccd:e793::3
    type: InternalIP
  - address: kind-worker
    type: Hostname
---
apiVersion: v1
kind: Node
metadata:
  name: kind-worker19
spec:
  podCIDR: 10.244.1.0/24
  podCIDRs:
  - 10.244.1.0/24
  - fd00:10:244:1::/64
status:
  addresses:
  - address: 172.18.0.19
    type: InternalIP
  - address: fc00:f853:ccd:e793::3
    type: InternalIP
  - address: kind-worker
    type: Hostname
